KCPQ_Project/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Body_Style__c</fullName>
        <label>Body Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>Hatchback</fullName>
                </value>
                <value>
                    <fullName>Convertible</fullName>
                </value>
                <value>
                    <fullName>SUV &amp; Crossover</fullName>
                </value>
                <value>
                    <fullName>Truck &amp; Van</fullName>
                </value>
                <value>
                    <fullName>Hybrids &amp; EVs</fullName>
                </value>
                <value>
                    <fullName>Commercial trucks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dummy_Product_Parent_Id__c</fullName>
        <label>Dummy Product Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Product_Quote_Id__c</fullName>
        <label>Dummy Product Quote Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exterior_Shade__c</fullName>
        <defaultValue>&quot;#a1a1a1&quot;</defaultValue>
        <label>Exterior Shade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Shade__c</fullName>
        <defaultValue>&quot;#dddddd&quot;</defaultValue>
        <label>Interior Shade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Vehicles</fullName>
                </value>
                <value>
                    <fullName>Commercial Vehicles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Image_Link__c</fullName>
        <label>Product Image Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_New__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;Product_Image_Link__c,&quot;Image Not Available&quot;,100,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Image New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <label>Product Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Seating__c</fullName>
        <label>Seating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>At Least 4 Passengers</fullName>
                </value>
                <value>
                    <fullName>At Least 7 Passengers</fullName>
                </value>
                <value>
                    <fullName>At Least 10 Passengers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>is360ProductViewEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select the checkbox if you want to enable the 360 Product View</description>
        <inlineHelpText>Select the checkbox if you want to enable the 360 Product View, Make sure the static resource for product is available</inlineHelpText>
        <label>360 Product View Enabled ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInventoryProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Product?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>